# shadowsocksr-native

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
install/: install-ssr.sh  ssr-daemon.sh
ios/ssrLocal/: ssrLocal.h
ios/ssrLocal.xcodeproj/: project.pbxproj
ios/ssrNative/: ssrNative.h
ios/ssrNative.xcodeproj/: project.pbxproj
libcork/core/: allocator.c
libcork/include/libcork/threads/: atomics.h
libipset/bdd/: assignments.c  basics.c  expanded.c  write.c
libudns/: rblcheck.c
src/: CMakeLists.txt  acl.c  cache.c  cmd_line_parser.c  cmd_line_parser.h  common.h  config_json.c  config_json.h  daemon_wrapper.c  dump_info.c  dump_info.h  encrypt.c  encrypt.h  http.c  jconf.c  json.c  local.c  local.h  local_config.c  local_config.h  netutils.c  netutils.h  resolv.c  resolv.h  rule.c  sockaddr_universal.c  sockaddr_universal.h  socks5.c  socks5.h  ssr_cipher_names.c  ssr_cipher_names.h  ssr_executive.c  ssr_executive.h  ssr_qr_code.c  ssr_qr_code.h  ssrbuffer.c  ssrbuffer.h  ssrutils.c  ssrutils.h  text_in_color.c  (+6 more)
src/client/: client.c  defs.h  listener.c  main.c  s5.c  s5.h  ssr_client_api.h  ssr_executive.c  ssrcipher.c  ssrcipher.h  tls_cli.c  tls_cli.h  tunnel.c  tunnel.h  util.c  util.h
src/obfs/: auth.c  auth.h  auth_chain.c  auth_chain.h  base64.c  base64.h  c_lib.c  c_lib.h  crc32.c  crc32.h  cstl_lib.c  cstl_lib.h  http_simple.c  http_simple.h  obfs.c  obfs.h  obfsutil.c  obfsutil.h  tls1.2_ticket.c  tls1.2_ticket.h  verify.c  verify.h
src/server/: server.c  server.h
win32/: ssr-native.sln  ssr-old.sln
win32/libcork/: libcork.vcxproj
win32/libipset/: libipset.vcxproj
win32/libudns/: libudns.vcxproj
win32/minicli/: cmd_line_parser.c  cmd_line_parser.h  minicli.c  minicli.sln  minicli.vcxproj  minicli.vcxproj.filters
win32/ssr-client/: ssr-client.vcxproj  ssr-client.vcxproj.filters  ssr-local.vcxproj  ssr-old.vcxproj  ssr-old.vcxproj.filters
win32/ssr-local/: ssr-local.vcxproj
win32/ssr-server/: ssr-server.vcxproj  ssr-server.vcxproj.filters
